# lambda

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml  test.yml
sns-discord/: Cargo.toml  lambda_function.py  test_lambda_function.py
sns-discord/src/: main.rs
src/: main.rs
