[package]
name = "sns-discord"
version = "0.1.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
tokio = "1.16.1"
hyper = { version = "0.14.20", features = ["client", "http2", "http1"] }
hyper-rustls = "0.23.0"
serde = "1.0.137"
serde_json = "1.0.88"
once_cell = "1.10.0"
