[package]
name = "sns-discord"
version = "0.1.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
tokio = "1.19.2"
hyper = { version = "0.14.26", features = ["client", "http2", "http1"] }
hyper-rustls = "0.23.2"
serde = "1.0.152"
serde_json = "1.0.91"
once_cell = "1.17.0"
